--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -87,16 +87,17 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <div class="header">
-    <img src="/static/helm-logo.png" alt="Helm">
-    <div class="btn-group">
-      <button class="btn" onclick="location.href='/'">Home</button>
-      <button class="btn" onclick="openModal('clientModal')">+ Add Client</button>
-      <button class="btn" onclick="openModal('caseModal')">+ Add Case</button>
-    </div>
-    <img src="/static/redwood-logo.png" alt="Redwood">
+<!-- HEADER -->
+<div class="header">
+  <img src="/static/helm-logo.png" alt="Helm">
+  <div class="btn-group">
+    <button class="btn" onclick="location.href='/'">Home</button>
+    <button class="btn" onclick="openModal('clientModal')">+ Add Client</button>
+    <button class="btn" onclick="openModal('caseModal')">+ Add Case</button>
+    <button class="btn" onclick="location.href='/report'">Reports</button>
   </div>
+  <img src="/static/redwood-logo.png" alt="Redwood">
+</div>
 
   <div class="container">
     <div class="left">
@@ -366,3 +367,4 @@
   </script>
 </body>
 </html>
+
